Fixing Masonry layout bug

--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -52,11 +52,12 @@ html[xmlns] .slides {
 	display: block
 }
 .flexslider {
-	margin: 0 0 60px;
+	margin: 0 1.5% 60px;
 	background: #2c3e50;
 	border: 1px solid #ddd;
 	position: relative;
-	zoom: 1
+	zoom: 1;
+	max-width: 99%;
 }
 .flex-viewport {
 	max-height: 2000px;
